<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">PoiRecommender</string>
    <string name="settings_name">Settings</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_find_poi">Find POI</string>

    <!-- Login -->
    <string name="activity_login" translatable="false">PoiRecommender-Login</string>
    <string name="login_authenticating">Authenticating…</string>
    <string name="login_failed">Login failed</string>
    <string name="login_wrong_email">enter a valid e-mail address</string>
    <string name="login_wrong_password">enter password</string>
    <string name="login_email" translatable="false">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_signup_link">No account yet? Create one!</string>

    <!-- Sign Up -->
    <string name="activity_signup" translatable="false">PoiRecommender-SignUp</string>
    <string name="signup_creating_account">Creating Account…</string>
    <string name="signup_failed">Sign Up failed</string>
    <string name="signup_password_repeat">Repeat password</string>
    <string name="signup_signup_button">Sign Up</string>
    <string name="signup_wrong_password_repeat">passwords aren\'t identical</string>

    <!-- Recommendation -->
    <string name="emptyRecommendationList">Nothing to recommend…</string>

    <!-- Dialogs -->
    <string name="ok">ok</string>
    <string name="select_single_item_dialog">Select single item from list:</string>
    <string name="select_items_dialog">Select items from list:</string>
    <string name="enter_number_dialog">Enter number value:</string>
    <string name="enter_range_dialog">Enter range:</string>

    <!-- Drawer -->
    <string name="drawer_open">Opened</string>
    <string name="drawer_close">Closed</string>

    <!-- POI Fragment -->
    <string name="poi_name">Name:</string>
    <string name="poi_latitude">Latitude:</string>
    <string name="poi_longitude">Longitude:</string>
    <string name="poi_check_in">Check In</string>
    <string name="save_poi_rating">Save POI rating</string>
    <string name="checked_in_message">Your position was checked in!</string>

    <!-- Find POI Fragment -->
    <string name="poi_search_hint">POI name</string>
    <string name="emptyPoiSearchList">No POI that meets given criteria…</string>
    <string name="search_failed_message">Search failed</string>
    <string name="location_absent">No location present</string>
    <string name="poi_name_absent">POI name missing</string>
    <string name="error_while_loading_pois">Error occurred while loading POIs</string>
    <string name="no_pois_for_recommendation">There are no POIs for recommendation</string>

</resources>
