<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".application.main.MainActivity" >
    <item
            android:id="@+id/action_add"
            android:icon="@drawable/ic_action_add_to_queue"
            android:title="@string/action_add"
            app:showAsAction="always"
            />
    <item
            android:id="@+id/action_save"
            android:icon="@drawable/ic_action_save"
            android:title="@string/action_save"
            app:showAsAction="always"
            />
    <item
            android:id="@+id/action_cancel"
            android:icon="@drawable/ic_action_cancel"
            android:title="@string/action_cancel"
            app:showAsAction="always"
            />
</menu>
