<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poi_name"
            />

        <TextView
            android:id="@+id/poi_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poi_latitude"
            />

        <TextView
            android:id="@+id/poi_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poi_longitude"
            />

        <TextView
            android:id="@+id/poi_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="@integer/poi_rating_stars_count"
            android:stepSize="@integer/poi_rating_stars_step"
            android:rating="@integer/poi_rating_stars_default"
            android:visibility="invisible"
            />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </FrameLayout>

    <TableRow>
        <Button
            android:id="@+id/poi_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poi_check_in"
            />
    </TableRow>
</TableLayout>